fix gap on card

--- a/src/ui/card/card.module.scss
+++ b/src/ui/card/card.module.scss
@@ -33,6 +33,7 @@
     }
 
     &__first{
+            height: 20rem;
 
         @include tablet{
             width: 21.1875rem;
@@ -48,6 +49,7 @@
     &__cover{
         width: 100%;
         border-radius: 0.9375rem 0.9375rem 0 0;
+        height: 100%;
 
         @include tablet{
             border-radius: 0.9375rem 0 0 0.9375rem;
